markdown-editor/src/org/netbeans/modules/markdown/syntax/antlr4/MarkdownAntlrParser.java
// Generated from MarkdownAntlrParser.g4 by ANTLR 4.13.0

  package org.netbeans.modules.markdown.syntax.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MarkdownAntlrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NL=1, BR=2, RAW_TEXT=3, HTML=4, WS=5, ATTR_COMMENT=6, EXCL=7, SQ_PAR_OPEN=8, 
		HEADER_HASH=9, LIST_ITEM_MARKER=10, D_ASTERIX=11, S_ASTERIX=12, BACKTICK_3=13, 
		BACKTICK_2=14, SETTEXT_H1_UNDERLINE=15, SETTEXT_H2_UNDERLINE=16, HORIZONTAL_RULE_HYPHEN=17, 
		HORIZONTAL_RULE=18, BLOCK_QUOTE_START=19, START_NL=20, TAB=21, SQ_PAR_CLOSE=22, 
		R_PAR_OPEN=23, R_PAR_CLOSE=24, IDENTIFIER=25, LINE_EOF=26;
	public static final int
		RULE_file = 0, RULE_main_element = 1, RULE_list = 2, RULE_paragraph = 3, 
		RULE_element = 4, RULE_listItem = 5, RULE_nestedListItem = 6, RULE_header = 7, 
		RULE_setTextHeader = 8, RULE_breakLine = 9, RULE_textEffect = 10, RULE_bold = 11, 
		RULE_italic = 12, RULE_textElement = 13, RULE_simpleText = 14, RULE_html = 15, 
		RULE_code = 16, RULE_inlineText = 17, RULE_blockCode = 18, RULE_blockQuote = 19, 
		RULE_codeText = 20, RULE_nl = 21, RULE_br = 22, RULE_link = 23, RULE_label = 24, 
		RULE_path = 25, RULE_labelText = 26, RULE_textLine = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "main_element", "list", "paragraph", "element", "listItem", "nestedListItem", 
			"header", "setTextHeader", "breakLine", "textEffect", "bold", "italic", 
			"textElement", "simpleText", "html", "code", "inlineText", "blockCode", 
			"blockQuote", "codeText", "nl", "br", "link", "label", "path", "labelText", 
			"textLine"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'['", null, null, null, 
			null, null, null, null, null, null, null, "'> '", null, null, "']'", 
			"'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NL", "BR", "RAW_TEXT", "HTML", "WS", "ATTR_COMMENT", "EXCL", "SQ_PAR_OPEN", 
			"HEADER_HASH", "LIST_ITEM_MARKER", "D_ASTERIX", "S_ASTERIX", "BACKTICK_3", 
			"BACKTICK_2", "SETTEXT_H1_UNDERLINE", "SETTEXT_H2_UNDERLINE", "HORIZONTAL_RULE_HYPHEN", 
			"HORIZONTAL_RULE", "BLOCK_QUOTE_START", "START_NL", "TAB", "SQ_PAR_CLOSE", 
			"R_PAR_OPEN", "R_PAR_CLOSE", "IDENTIFIER", "LINE_EOF"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MarkdownAntlrParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MarkdownAntlrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MarkdownAntlrParser.EOF, 0); }
		public List<Main_elementContext> main_element() {
			return getRuleContexts(Main_elementContext.class);
		}
		public Main_elementContext main_element(int i) {
			return getRuleContext(Main_elementContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				main_element();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 36601784L) != 0) );
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Main_elementContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public SetTextHeaderContext setTextHeader() {
			return getRuleContext(SetTextHeaderContext.class,0);
		}
		public BlockCodeContext blockCode() {
			return getRuleContext(BlockCodeContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public BlockQuoteContext blockQuote() {
			return getRuleContext(BlockQuoteContext.class,0);
		}
		public ParagraphContext paragraph() {
			return getRuleContext(ParagraphContext.class,0);
		}
		public BreakLineContext breakLine() {
			return getRuleContext(BreakLineContext.class,0);
		}
		public TerminalNode START_NL() { return getToken(MarkdownAntlrParser.START_NL, 0); }
		public Main_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterMain_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitMain_element(this);
		}
	}

	public final Main_elementContext main_element() throws RecognitionException {
		Main_elementContext _localctx = new Main_elementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main_element);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				header();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				setTextHeader();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				blockCode();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				list();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				blockQuote();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(68);
				paragraph();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(69);
				breakLine();
				setState(70);
				match(START_NL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public List<ListItemContext> listItem() {
			return getRuleContexts(ListItemContext.class);
		}
		public ListItemContext listItem(int i) {
			return getRuleContext(ListItemContext.class,i);
		}
		public List<NestedListItemContext> nestedListItem() {
			return getRuleContexts(NestedListItemContext.class);
		}
		public NestedListItemContext nestedListItem(int i) {
			return getRuleContext(NestedListItemContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(MarkdownAntlrParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MarkdownAntlrParser.NL, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(88);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case LIST_ITEM_MARKER:
						{
						setState(74);
						listItem();
						setState(78);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NL) {
							{
							{
							setState(75);
							match(NL);
							}
							}
							setState(80);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					case TAB:
						{
						setState(81);
						nestedListItem();
						setState(85);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NL) {
							{
							{
							setState(82);
							match(NL);
							}
							}
							setState(87);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(90); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParagraphContext extends ParserRuleContext {
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public ParagraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paragraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterParagraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitParagraph(this);
		}
	}

	public final ParagraphContext paragraph() throws RecognitionException {
		ParagraphContext _localctx = new ParagraphContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_paragraph);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			textLine();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public TextElementContext textElement() {
			return getRuleContext(TextElementContext.class,0);
		}
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public HtmlContext html() {
			return getRuleContext(HtmlContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_element);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RAW_TEXT:
			case WS:
			case EXCL:
			case SQ_PAR_OPEN:
			case D_ASTERIX:
			case S_ASTERIX:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				textElement();
				}
				break;
			case BACKTICK_2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				code();
				}
				break;
			case HTML:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				html();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListItemContext extends ParserRuleContext {
		public TerminalNode LIST_ITEM_MARKER() { return getToken(MarkdownAntlrParser.LIST_ITEM_MARKER, 0); }
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public ListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterListItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitListItem(this);
		}
	}

	public final ListItemContext listItem() throws RecognitionException {
		ListItemContext _localctx = new ListItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(LIST_ITEM_MARKER);
			setState(100);
			textLine();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NestedListItemContext extends ParserRuleContext {
		public TerminalNode LIST_ITEM_MARKER() { return getToken(MarkdownAntlrParser.LIST_ITEM_MARKER, 0); }
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public List<TerminalNode> TAB() { return getTokens(MarkdownAntlrParser.TAB); }
		public TerminalNode TAB(int i) {
			return getToken(MarkdownAntlrParser.TAB, i);
		}
		public List<TerminalNode> WS() { return getTokens(MarkdownAntlrParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(MarkdownAntlrParser.WS, i);
		}
		public NestedListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nestedListItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterNestedListItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitNestedListItem(this);
		}
	}

	public final NestedListItemContext nestedListItem() throws RecognitionException {
		NestedListItemContext _localctx = new NestedListItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nestedListItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(102);
				match(TAB);
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TAB );
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(107);
				match(WS);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(LIST_ITEM_MARKER);
			setState(114);
			textLine();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode HEADER_HASH() { return getToken(MarkdownAntlrParser.HEADER_HASH, 0); }
		public TerminalNode WS() { return getToken(MarkdownAntlrParser.WS, 0); }
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(HEADER_HASH);
			setState(117);
			match(WS);
			setState(118);
			textLine();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetTextHeaderContext extends ParserRuleContext {
		public TextElementContext textElement() {
			return getRuleContext(TextElementContext.class,0);
		}
		public TerminalNode NL() { return getToken(MarkdownAntlrParser.NL, 0); }
		public TerminalNode SETTEXT_H1_UNDERLINE() { return getToken(MarkdownAntlrParser.SETTEXT_H1_UNDERLINE, 0); }
		public TerminalNode SETTEXT_H2_UNDERLINE() { return getToken(MarkdownAntlrParser.SETTEXT_H2_UNDERLINE, 0); }
		public SetTextHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setTextHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterSetTextHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitSetTextHeader(this);
		}
	}

	public final SetTextHeaderContext setTextHeader() throws RecognitionException {
		SetTextHeaderContext _localctx = new SetTextHeaderContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_setTextHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			textElement();
			setState(121);
			match(NL);
			setState(122);
			_la = _input.LA(1);
			if ( !(_la==SETTEXT_H1_UNDERLINE || _la==SETTEXT_H2_UNDERLINE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BreakLineContext extends ParserRuleContext {
		public TerminalNode HORIZONTAL_RULE() { return getToken(MarkdownAntlrParser.HORIZONTAL_RULE, 0); }
		public TerminalNode HORIZONTAL_RULE_HYPHEN() { return getToken(MarkdownAntlrParser.HORIZONTAL_RULE_HYPHEN, 0); }
		public BreakLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterBreakLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitBreakLine(this);
		}
	}

	public final BreakLineContext breakLine() throws RecognitionException {
		BreakLineContext _localctx = new BreakLineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_breakLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_la = _input.LA(1);
			if ( !(_la==HORIZONTAL_RULE_HYPHEN || _la==HORIZONTAL_RULE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextEffectContext extends ParserRuleContext {
		public BoldContext bold() {
			return getRuleContext(BoldContext.class,0);
		}
		public ItalicContext italic() {
			return getRuleContext(ItalicContext.class,0);
		}
		public TextEffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textEffect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterTextEffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitTextEffect(this);
		}
	}

	public final TextEffectContext textEffect() throws RecognitionException {
		TextEffectContext _localctx = new TextEffectContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_textEffect);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case D_ASTERIX:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				bold();
				}
				break;
			case S_ASTERIX:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				italic();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoldContext extends ParserRuleContext {
		public List<TerminalNode> D_ASTERIX() { return getTokens(MarkdownAntlrParser.D_ASTERIX); }
		public TerminalNode D_ASTERIX(int i) {
			return getToken(MarkdownAntlrParser.D_ASTERIX, i);
		}
		public TextElementContext textElement() {
			return getRuleContext(TextElementContext.class,0);
		}
		public BoldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bold; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterBold(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitBold(this);
		}
	}

	public final BoldContext bold() throws RecognitionException {
		BoldContext _localctx = new BoldContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_bold);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(D_ASTERIX);
			setState(131);
			textElement();
			setState(132);
			match(D_ASTERIX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItalicContext extends ParserRuleContext {
		public List<TerminalNode> S_ASTERIX() { return getTokens(MarkdownAntlrParser.S_ASTERIX); }
		public TerminalNode S_ASTERIX(int i) {
			return getToken(MarkdownAntlrParser.S_ASTERIX, i);
		}
		public TextElementContext textElement() {
			return getRuleContext(TextElementContext.class,0);
		}
		public ItalicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_italic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterItalic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitItalic(this);
		}
	}

	public final ItalicContext italic() throws RecognitionException {
		ItalicContext _localctx = new ItalicContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_italic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(S_ASTERIX);
			setState(135);
			textElement();
			setState(136);
			match(S_ASTERIX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextElementContext extends ParserRuleContext {
		public TextEffectContext textEffect() {
			return getRuleContext(TextEffectContext.class,0);
		}
		public SimpleTextContext simpleText() {
			return getRuleContext(SimpleTextContext.class,0);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public TextElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).enterTextElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MarkdownAntlrParserListener ) ((MarkdownAntlrParserListener)listener).exitTextElement(this);
		}
	}

	public final TextElementContext textElement() throws RecognitionException {
		TextElementContext _localctx = new TextElementContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_textElement);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case D_ASTERIX:
			case S_ASTERIX:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				textEffect();
				}
				break;
			case RAW_TEXT:
			case WS:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				simpleText();
				}
				break;
			case EXCL:
			case SQ_PAR_OPEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				link();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
